--- a/apps/apps.ld.in
+++ b/apps/apps.ld.in
@@ -2,10 +2,8 @@ ENTRY(_init);
 
 MEMORY
 {
-    FLASH (rx) : 
-        ORIGIN = __FLASH_ORIGIN + 0x20000, 
-        LENGTH = __FLASH_SIZE - 0x20000
-    SRAM (rwx) : ORIGIN = (__RAM_BASE + __KMEM_SIZE), LENGTH = 4K
+    FLASH (rx) : ORIGIN = __FLASH_ORIGIN + __KFLASHMEM_SIZE, LENGTH = __AFLASHMEM_SIZE
+    SRAM (rwx) : ORIGIN = (__RAM_BASE + __KMEM_SIZE), LENGTH = __AMEM_SIZE
 }
 
 SECTIONS
@@ -16,7 +14,7 @@ SECTIONS
         *(.text*)
         *(.rodata*)
     } > FLASH
- 
+
     .data :
     {
         apps_etext = LOADADDR(.data);
@@ -25,7 +23,7 @@ SECTIONS
         *(.data*)
         apps_edata = .;
     } > SRAM AT > FLASH
- 
+
     .bss :
     {
         apps_bss = .;
