--- a/kernel/hal/arch/stellaris/stellaris.ld.in
+++ b/kernel/hal/arch/stellaris/stellaris.ld.in
@@ -6,8 +6,8 @@
 ENTRY(Reset_Handler) 
 MEMORY
 {
-    FLASH (rx) : ORIGIN = 0x00000000, LENGTH = 256K
-    SRAM (rwx) : ORIGIN = 0x20000000, LENGTH = 64K
+    FLASH (rx) : ORIGIN = __FLASH_ORIGIN, LENGTH = __KFLASHMEM_SIZE
+    SRAM (rwx) : ORIGIN = __RAM_BASE, LENGTH = __KMEM_SIZE
 }
 
 __StackTop = ORIGIN(SRAM) + LENGTH(SRAM) - 4;
